Too long between commits -- added load & transform dags; removed injuries temporarily

--- a/ingestion/scrapers/nfl-xpath.html
+++ b/ingestion/scrapers/nfl-xpath.html
@@ -1,3 +1,6 @@
+<!-- just adding this here for now as a reference while building scraper!-->
+
+
 nfl-xpath
 <div class="select-table__table" data-week="week-7" style="">
                 <div class="select-table__data">
